new app Seat_Availability

--- a/userpanal/templates/userpanal/base.html
+++ b/userpanal/templates/userpanal/base.html
@@ -64,6 +64,7 @@
                                 <li role="presentation"><a href="{% url 'userpanal:pnr_status' %}"  >PNR Status</a></li>
                                 <li role="presentation"><a href="{% url 'Train_Route:trainRoute' %}">Train Route</a></li>
                                 <li role="presentation"><a href="{% url 'Live_Train_Status:liveTrainStatus' %}" >Live Train Status</a></li>
+                                <li role="presentation"><a href="{% url 'Seat_Availability:seatAvailability' %}" >Seat Availability</a></li>
                             </ul>
                         </div>
                     </div>
