--- a/userpanal/templates/userpanal/home.html
+++ b/userpanal/templates/userpanal/home.html
@@ -16,5 +16,10 @@
         <h3>
             <a href="{% url 'Live_Train_Status:liveTrainStatus' %}" > Live Train Status</a>
         </h3>
+
+        <h3>
+            <a href="{% url 'Live_Train_Status:liveTrainStatus' %}" > Live Train Status</a>
+        </h3>
+
     </div>
 {% endblock %}
