--- a/Seat_Availability/templates/Seat_Availability/seatAvailabilityDetail.html
+++ b/Seat_Availability/templates/Seat_Availability/seatAvailabilityDetail.html
@@ -33,54 +33,56 @@
         .background-color-yellow { background-color: palegreen; }
     </style>
 
-
-    <div class="container">
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th>Train Number</th>
-              <th>Train Name</th>
-              <th>Date</th>
-              <th>Source Station</th>
-              <th>Destination Station</th>
-              <th>Quota Code</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>{{ train_number}}</td>
-              <td>{{ train_name}}</td>
-              <td>{{ last_updated.date }}</td>
-              <td>{{ from_station.name }} ({{ from_station.code }})</td>
-              <td>{{ to_station.name }} ({{ to_station.code }})</td>
-              <td>{{ quota.quota_name }} ({{ quota.quota_code }})</td>
-            </tr>
-          </tbody>
-        </table>
-
-
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th>No</th>
-              <th>Date (DD-MM-YYYY)</th>
-              <th>Class - {{ train_class.class_name }} ({{ train_class.class_code }})</th>
-            </tr>
-          </thead>
-          <tbody>
-
-
-            {% for i in availability %}
+    {% if response_code == 200 %}
+        <div class="container">
+            <table class="table table-bordered">
+              <thead>
                 <tr>
-                  <th scope="row">{{ forloop.counter }}</th>
-                  <td>{{ i.date }}</td>
-                  <td>{{ i.status }}</td>
+                  <th>Train Number</th>
+                  <th>Train Name</th>
+                  <th>Date</th>
+                  <th>Source Station</th>
+                  <th>Destination Station</th>
+                  <th>Quota Code</th>
                 </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>{{ train_number}}</td>
+                  <td>{{ train_name}}</td>
+                  <td>{{ last_updated.date }}</td>
+                  <td>{{ from_station.name }} ({{ from_station.code }})</td>
+                  <td>{{ to_station.name }} ({{ to_station.code }})</td>
+                  <td>{{ quota.quota_name }} ({{ quota.quota_code }})</td>
+                </tr>
+              </tbody>
+            </table>
 
-    </div>
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>No</th>
+                  <th>Date (DD-MM-YYYY)</th>
+                  <th>Class - {{ train_class.class_name }} ({{ train_class.class_code }})</th>
+                </tr>
+              </thead>
+              <tbody>
 
+
+                {% for i in availability %}
+                    <tr>
+                      <th scope="row">{{ forloop.counter }}</th>
+                      <td>{{ i.date }}</td>
+                      <td>{{ i.status }}</td>
+                    </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+
+        </div>
+    {% else %}
+        <h2> {{ error }} </h2>
+        <h4> Class-{{ train_class.class_name }}, Does Not exist for Train {{ train_name }} ({{ train_number }})</h4>
+    {% endif %}
 
 {% endblock %}
