--- a/userpanal/static/userpanal/style.css
+++ b/userpanal/static/userpanal/style.css
@@ -19,7 +19,7 @@ ul.errorlist > li {
 
 .navbar-backgrnd {
     color: red;
-    min-height: 80px;
+    min-height: 50px;
 }
 
 .navbar-header {
@@ -28,7 +28,7 @@ ul.errorlist > li {
 
 .navbar-default .navbar-brand {
     font-family: 'Satisfy', cursive;
-    font-size: 50px;
+    font-size: 30px;
     color : saddlebrown;
 }
 
@@ -41,19 +41,33 @@ ul.errorlist > li {
     color: #FDB230;
 }
 
+.fg_img img{
+    height:30px;
+    width:50px;
+}
+
+
 #background{
     width: 100%;
     height: 100%;
 }
 
 #bg_img{
-    width: 100%;
-    position: absolute;
+
+    min-height: 50px;
+    min-width: 50px;
+
 }
 
 #content{
     width: 100%;
     height: 100%;
     color: aqua;
-    position: relative;
+    position: absolute;
+}
+
+#add_space{
+    height: 100%;
+
+
 }
