--- a/userpanal/templates/userpanal/home.html
+++ b/userpanal/templates/userpanal/home.html
@@ -18,7 +18,7 @@
         </h3>
 
         <h3>
-            <a href="{% url 'Live_Train_Status:liveTrainStatus' %}" > Live Train Status</a>
+            <a href="{% url 'Seat_Availability:seatAvailability' %}" > Live Train Status</a>
         </h3>
 
     </div>
