added menu bar in apps

--- a/userpanal/templates/userpanal/Detail.html
+++ b/userpanal/templates/userpanal/Detail.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    This is Detail Page
-</body>
-</html>
+
+<div class="col-xs-9">
+    <div class="container-fluid">
+        <div class="row">
+                <a href="{% url 'userpanal:index' %}" class="btn btn-primary">Home</a>
+                <a href="{% url 'userpanal:pnr_status' %}" class="btn btn-primary">PNR Status</a>
+                <a href="{% url 'Train_Route:trainRoute' %}" class="btn btn-primary">Train Route</a>
+                <a href="{% url 'Live_Train_Status:liveTrainStatus' %}" class="btn btn-primary">Live Train Status</a>
+                <a href="{% url 'Seat_Availability:seatAvailability' %}" class="btn btn-primary">Seat Availability</a>
+                <a href="{% url 'Seat_Availability:seatAvailability' %}" class="btn btn-primary">Seat Availability</a>
+        </div>
+        <hr>
+    </div>
+</div>
+
