--- a/Live_Train_Status/templates/Live_Train_Status/liveTrainStatus.html
+++ b/Live_Train_Status/templates/Live_Train_Status/liveTrainStatus.html
@@ -11,12 +11,12 @@
     </style>
 
 
+    {% include 'userpanal/Detail.html' %}
 
-    <div class="container">
+    <div class="col-xs-9">
+        <div class="container-fluid">
 
-        <h3>
-            Live Train Status
-        </h3>
+        <div class="page-header"><h2>Live Train Status</h2></div>
 
         <form role = "form" action="" method="post" enctype="multipart/form-data">
            {% csrf_token %}
@@ -25,6 +25,7 @@
            </div>
            <button type = "submit" class = "btn btn-default">Submit</button>
         </form>
+        </div>
     </div>
 
 
