--- a/Seat_Availability/templates/Seat_Availability/seatAvailability.html
+++ b/Seat_Availability/templates/Seat_Availability/seatAvailability.html
@@ -27,11 +27,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <div class="container">
+  {% include 'userpanal/Detail.html' %}
 
-        <h3>
-            Seat Availability
-        </h3>
+  <div class="col-xs-9">
+    <div class="container-fluid">
+        <div class="page-header"><h2>Seat Availability</h2></div>
 
         <form role = "form" action="" method="post" enctype="multipart/form-data">
            {% csrf_token %}
@@ -97,6 +97,7 @@
         </form>
 
     </div>
+  </div>
 
                 <!-- Extra JavaScript/CSS added manually in "Settings" tab -->
                 <!-- Include jQuery -->
