--- a/Train_Route/templates/Train_Route/trainRoute.html
+++ b/Train_Route/templates/Train_Route/trainRoute.html
@@ -10,23 +10,22 @@
         }
     </style>
 
+    {% include 'userpanal/Detail.html' %}
 
+    <div class="col-xs-9">
+        <div class="container-fluid">
+            <div class="page-header">
+                <h2>Train Route</h2>
+            </div>
 
-    <div class="container">
-
-        <h3>
-            Train Route
-        </h3>
-
-        <form role = "form" action="" method="post" enctype="multipart/form-data">
-           {% csrf_token %}
-           <div class = "form-group">
-              <input class = "form-control input-lg" type = "text" name="trainno" placeholder ="Enter Train Number">
-           </div>
-           <button type = "submit" class = "btn btn-default">Submit</button>
-        </form>
-
+            <form role = "form" action="" method="post" enctype="multipart/form-data">
+               {% csrf_token %}
+               <div class = "form-group">
+                  <input class = "form-control input-lg" type = "text" name="trainno" placeholder ="Enter Train Number">
+               </div>
+               <button type = "submit" class = "btn btn-default">Submit</button>
+            </form>
+        </div>
     </div>
-
 
 {% endblock %}
