--- a/userpanal/templates/userpanal/base.html
+++ b/userpanal/templates/userpanal/base.html
@@ -51,42 +51,14 @@
          </div>
     </nav>
 
-    {% if user and not user.is_anonymous %}
-    <!-- Page Content -->
-    <div class="container">
 
-        <!-- First Featurette -->
-        <div class="featurette" id="about">
-            <!------------------------code---------------start---------------->
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <!-- Nav tabs -->
-                        <div class="card">
-                            <ul class="nav nav-tabs" role="tablist">
-                                <li role="presentation" class="active"><a href="{% url 'userpanal:home' %}" >Home</a></li>
-                                <li role="presentation"><a href="{% url 'userpanal:pnr_status' %}"  >PNR Status</a></li>
-                                <li role="presentation"><a href="{% url 'Train_Route:trainRoute' %}">Train Route</a></li>
-                                <li role="presentation"><a href="{% url 'Live_Train_Status:liveTrainStatus' %}" >Live Train Status</a></li>
-                                <li role="presentation"><a href="{% url 'Seat_Availability:seatAvailability' %}" >Seat Availability</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!----Code------end----------------------------------->
+    <div class="col-xs-12">
+        <div class="container-fluid img-responsive">
+            {% block body %}
+            {% endblock %}
+
         </div>
-
-        <!-- jQuery -->
-        <script src="http://www.tutorialspoint.com/bootstrap/scripts/jquery.min.js"></script>
-
-        <!-- Bootstrap Core JavaScript -->
-        <script src="http://www.tutorialspoint.com/bootstrap/js/bootstrap.min.js"></script>
-
-    {% endif %}
-
-    {% block body %}
-    {% endblock %}
+    </div>
 
     <div class="col-xs-3 " id="add_space">
         <div class="container-fluid img-responsive">
