--- a/userpanal/templates/userpanal/pnr.html
+++ b/userpanal/templates/userpanal/pnr.html
@@ -1,6 +1,7 @@
 
 {% extends 'userpanal/base.html' %}
 
+
 {% load staticfiles %}
 {% block body %}
 
@@ -9,25 +10,28 @@
             border-collapse: collapse;
             width: 50%;
         }
+
+
+
     </style>
 
+    {% include 'userpanal/Detail.html' %}
+
+    <div class="col-xs-9">
+        <div class="container-fluid">
+            <div class="page-header">
+                <h2>PNR Status</h2>
+            </div>
 
 
-    <div class="container">
-
-        <h3>
-            PNR status page
-        </h3>
-
-        <form role = "form" action="" method="post" enctype="multipart/form-data">
-           {% csrf_token %}
-           <div class = "form-group">
-              <input class = "form-control input-lg" type = "text" name="pnrno" placeholder ="Enter PNR Number">
-           </div>
-           <button type = "submit" class = "btn btn-default">Submit</button>
-        </form>
-
+            <form role = "form" action="" method="post" enctype="multipart/form-data">
+               {% csrf_token %}
+               <div class = "form-group">
+                  <input class = "form-control input-lg" type = "text" name="pnrno" placeholder ="Enter PNR Number">
+               </div>
+               <button type = "submit" class = "btn btn-default">Submit</button>
+            </form>
+        </div>
     </div>
-
 
 {% endblock %}
