upto cancelled train

--- a/Live_Train_Status/templates/Live_Train_Status/liveTrainStatusDetail.html
+++ b/Live_Train_Status/templates/Live_Train_Status/liveTrainStatusDetail.html
@@ -3,6 +3,9 @@
 
 {% load staticfiles %}
 {% block body %}
+
+
+
     <script type="text/javascript">
             $(document).ready(function(){
              setInterval(findYellow,1000);
@@ -33,7 +36,7 @@
         .background-color-yellow { background-color: palegreen; }
     </style>
 
-<body>
+{% include 'userpanal/Detail.html' %}
 <div class="container">
 
 <table class="table table-bordered">
