--- a/Train_Route/templates/Train_Route/trainRouteDetail.html
+++ b/Train_Route/templates/Train_Route/trainRouteDetail.html
@@ -21,7 +21,7 @@
         }
     </style>
 
-<body>
+{% include 'userpanal/Detail.html' %}
 <div class="container">
 
 <table class="table table-bordered">
