--- a/Seat_Availability/templates/Seat_Availability/seatAvailability.html
+++ b/Seat_Availability/templates/Seat_Availability/seatAvailability.html
@@ -11,21 +11,21 @@
     </style>
 
 <!--formden.js communicates with FormDen server to validate fields and submit via AJAX -->
+<!--
 <script type="text/javascript" src="https://formden.com/static/cdn/formden.js"></script>
-
+-->
 <!-- Special version of Bootstrap that is isolated to content wrapped in .bootstrap-iso -->
+<!--
 <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" />
+-->
 
-<!--Font Awesome (added because you use icons in your prepend/append)-->
+<!--Font Awesome (added because you use icons in your prepend/append) to show calender icon-->
 <link rel="stylesheet" href="https://formden.com/static/cdn/font-awesome/4.4.0/css/font-awesome.min.css" />
 
 <!-- Inline CSS based on choices in "Settings" tab -->
+<!--
 <style>.bootstrap-iso .formden_header h2, .bootstrap-iso .formden_header p, .bootstrap-iso form{font-family: Arial, Helvetica, sans-serif; color: black}.bootstrap-iso form button, .bootstrap-iso form button:hover{color: white !important;} .asteriskField{color: red;}</style>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+-->
 
   {% include 'userpanal/Detail.html' %}
 
