--- a/Seat_Availability/templates/Seat_Availability/seatAvailabilityDetail.html
+++ b/Seat_Availability/templates/Seat_Availability/seatAvailabilityDetail.html
@@ -33,6 +33,8 @@
         .background-color-yellow { background-color: palegreen; }
     </style>
 
+    {% include 'userpanal/Detail.html' %}
+
     {% if response_code == 200 %}
         <div class="container">
             <table class="table table-bordered">
