--- a/userpanal/templates/userpanal/base.html
+++ b/userpanal/templates/userpanal/base.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="en">
 <head>
@@ -13,7 +15,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'userpanal/style.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'userpanal/one-page-wonder.css' %}" />
 
-
+    <!--
+    <meta http-equiv="refresh" content="30">
+    -->
 </head>
 <body>
 
@@ -26,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <i class="fa fa-train" aria-hidden="true"></i>
+
                 <!--
                 <div class="fb_img">
                     <img src={% static "images/login-with-facebook.png" %} alt="" >
@@ -56,9 +60,10 @@
         <div class="container-fluid img-responsive">
             {% block body %}
             {% endblock %}
-
         </div>
     </div>
+
+
 
     <div class="col-xs-3 " id="add_space">
         <div class="container-fluid img-responsive">
@@ -69,13 +74,15 @@
         </div>
     </div>
 
-<div class="footer ">
-  <p>Copyright (c) 2008</p>
-</div>
+
+
+
 </body>
 
-
-
-
+<!--
+<div class="footer container-fluid ">
+  <p>© 2016. All Rights Reserved.</p>
+</div>
+-->
 
 </html>
