--- a/userpanal/templates/userpanal/pnr_status.html
+++ b/userpanal/templates/userpanal/pnr_status.html
@@ -22,8 +22,8 @@
 
 
     {% include 'userpanal/Detail.html' %}
-
-    <div class="container">
+    <div class="col-xs-9">
+    <div class="container-fluid">
         <h3>PNR- {{ pnr }}</h3>
 
         {% if error == True %}
@@ -111,6 +111,6 @@
         </h4>
 
     </div>
-
+    </div>
 
 {% endblock %}
