--- a/userpanal/templates/userpanal/pnr.html
+++ b/userpanal/templates/userpanal/pnr.html
@@ -27,6 +27,11 @@
                <button type = "submit" class = "btn btn-default">Submit</button>
             </form>
         </div>
+
+        <h4>
+            <a href="{% url 'userpanal:pnrNotification' %}" > Start PNR Notification</a>
+        </h4>
+
     </div>
 
 {% endblock %}
