--- a/Train_Between_Stations/templates/Train_Between_Stations/trainBetweenStationsDetail.html
+++ b/Train_Between_Stations/templates/Train_Between_Stations/trainBetweenStationsDetail.html
@@ -24,6 +24,8 @@
 {% include 'userpanal/Detail.html' %}
 <div class="container">
 
+{{ person_name }}
+
 <table class="table table-bordered">
 
   <thead>
